# vm-C

./: .gitignore  CMakeLists.txt  README.md
include/vm/: define.h  input_buffering.h  vm.h  vm_impl.h
src/: input_buffering.c  processor.c  vm.c
